[gd_scene format=3 uid="uid://brhckb1lkjt2d"]

[ext_resource type="Script" uid="uid://h2hn8dpdkqu2" path="res://player/player.gd" id="1_g1dw6"]
[ext_resource type="Texture2D" uid="uid://0wqo08ppgyux" path="res://Ninja Adventure - Asset Pack/Actor/Characters/NinjaGreen/SeparateAnim/Walk.png" id="1_oul6g"]
[ext_resource type="Texture2D" uid="uid://117th8lgbcdw" path="res://Ninja Adventure - Asset Pack/Actor/Characters/NinjaGreen/SeparateAnim/Idle.png" id="1_rkbax"]
[ext_resource type="Texture2D" uid="uid://dualqpud1jpvv" path="res://Ninja Adventure - Asset Pack/Actor/Characters/NinjaGreen/SeparateAnim/Attack.png" id="2_yw30f"]
[ext_resource type="PackedScene" uid="uid://cmsea8l87t1x8" path="res://player/weapon/weapon.tscn" id="5_8t03j"]
[ext_resource type="PackedScene" uid="uid://dvk8ofnxjkd0q" path="res://components/damage/damage_component.tscn" id="7_boad6"]
[ext_resource type="AudioStream" uid="uid://d2bs87bpy7311" path="res://SNES - The Legend of Zelda_ A Link to the Past - Miscellaneous - Sound Effects/fighter sword 1.wav" id="7_rgyib"]
[ext_resource type="AudioStream" uid="uid://81rem6ejea54" path="res://Ninja Adventure - Asset Pack/Audio/Sounds/Hit & Impact/Hit8.wav" id="8_rgyib"]
[ext_resource type="PackedScene" uid="uid://eq00otqnti1x" path="res://components/knockback/knockback_component.tscn" id="9_hg6s5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bjvpn"]
atlas = ExtResource("2_yw30f")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7qer"]
atlas = ExtResource("2_yw30f")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4c7l"]
atlas = ExtResource("2_yw30f")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7c3f"]
atlas = ExtResource("2_yw30f")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqiix"]
atlas = ExtResource("1_rkbax")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_65viv"]
atlas = ExtResource("1_rkbax")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c35mf"]
atlas = ExtResource("1_rkbax")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7oew"]
atlas = ExtResource("1_rkbax")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebec5"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oul6g"]
atlas = ExtResource("1_oul6g")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("1_oul6g")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_boad6"]
atlas = ExtResource("1_oul6g")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgyib"]
atlas = ExtResource("1_oul6g")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkbax"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1dw6"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw30f"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjkh3"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yllr7"]
atlas = ExtResource("1_oul6g")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6p2"]
atlas = ExtResource("1_oul6g")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wodsf"]
atlas = ExtResource("1_oul6g")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_32hag"]
atlas = ExtResource("1_oul6g")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g6k8r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjvpn")
}],
"loop": true,
"name": &"attack down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7qer")
}],
"loop": true,
"name": &"attack left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4c7l")
}],
"loop": true,
"name": &"attack right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7c3f")
}],
"loop": true,
"name": &"attack up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqiix")
}],
"loop": true,
"name": &"idle down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_65viv")
}],
"loop": true,
"name": &"idle left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c35mf")
}],
"loop": true,
"name": &"idle right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7oew")
}],
"loop": true,
"name": &"idle up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebec5")
}],
"loop": true,
"name": &"walk down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oul6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boad6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgyib")
}],
"loop": true,
"name": &"walk left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkbax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1dw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw30f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjkh3")
}],
"loop": true,
"name": &"walk right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yllr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb6p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32hag")
}],
"loop": true,
"name": &"walk up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rkbax"]
radius = 5.0990195

[sub_resource type="CircleShape2D" id="CircleShape2D_boad6"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hg6s5"]
radius = 7.071068

[sub_resource type="Animation" id="Animation_1wwld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_pmsee"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.20000002),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1.0, 0.0, 1.0, 0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1wwld"]
_data = {
&"RESET": SubResource("Animation_1wwld"),
&"hurt": SubResource("Animation_pmsee")
}

[node name="Player" type="CharacterBody2D" unique_id=279543829 groups=["player"]]
collision_layer = 2
collision_mask = 13
motion_mode = 1
script = ExtResource("1_g1dw6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=93024993]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_g6k8r")
animation = &"attack up"
autoplay = "idle down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=181110495]
visible = false
shape = SubResource("CircleShape2D_rkbax")

[node name="Camera2D" type="Camera2D" parent="." unique_id=181001614]

[node name="Weapons" type="Node2D" parent="." unique_id=365599870]
unique_name_in_owner = true

[node name="WeaponLeft" parent="Weapons" unique_id=1506364793 instance=ExtResource("5_8t03j")]
unique_name_in_owner = true
position = Vector2(-2, 4)

[node name="WeaponUp" parent="Weapons" unique_id=617415542 instance=ExtResource("5_8t03j")]
unique_name_in_owner = true
position = Vector2(-4, -2)
rotation = 1.5707964

[node name="WeaponRight" parent="Weapons" unique_id=1731996766 instance=ExtResource("5_8t03j")]
unique_name_in_owner = true
position = Vector2(2, 4)
rotation = 3.1415927

[node name="WeaponDown" parent="Weapons" unique_id=2068808696 instance=ExtResource("5_8t03j")]
unique_name_in_owner = true
position = Vector2(-2, 2)
rotation = 4.712389

[node name="DamageComponent" parent="." unique_id=1429838472 instance=ExtResource("7_boad6")]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" parent="DamageComponent" index="0" unique_id=1061504655]
shape = SubResource("CircleShape2D_boad6")
debug_color = Color(0.6783122, 0.5051648, 5.7756904e-07, 0.41960785)

[node name="KnockbackComponent" parent="." unique_id=1500406809 instance=ExtResource("9_hg6s5")]
unique_name_in_owner = true
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" parent="KnockbackComponent" index="0" unique_id=1749381845]
shape = SubResource("CircleShape2D_hg6s5")
debug_color = Color(1.7808378e-06, 0.64992064, 0.13606134, 0.41960785)

[node name="WeaponSound" type="AudioStreamPlayer" parent="." unique_id=1759539607]
unique_name_in_owner = true
stream = ExtResource("7_rgyib")

[node name="HurtSound" type="AudioStreamPlayer" parent="." unique_id=1468874747]
unique_name_in_owner = true
stream = ExtResource("8_rgyib")

[node name="UI" type="CanvasLayer" parent="." unique_id=551239488]

[node name="MarginContainer" type="MarginContainer" parent="UI" unique_id=687344436]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5

[node name="HeartsContainer" type="HBoxContainer" parent="UI/MarginContainer" unique_id=1934513031]
unique_name_in_owner = true
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1486589837]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_1wwld")

[node name="DebugLabel" type="Label" parent="." unique_id=1881059788]
unique_name_in_owner = true
offset_left = -19.0
offset_top = 10.0
offset_right = 21.0
offset_bottom = 33.0

[connection signal="area_entered" from="Weapons/WeaponLeft" to="." method="_on_weapon_area_entered"]
[connection signal="area_entered" from="Weapons/WeaponUp" to="." method="_on_weapon_area_entered"]
[connection signal="area_entered" from="Weapons/WeaponRight" to="." method="_on_weapon_area_entered"]
[connection signal="area_entered" from="Weapons/WeaponDown" to="." method="_on_weapon_area_entered"]
[connection signal="took_damage" from="DamageComponent" to="." method="_on_damageable_component_took_damage"]

[editable path="DamageComponent"]
[editable path="KnockbackComponent"]
